--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,7 +11,6 @@
     margin: 0%;
     padding: 0%;
   }
-  @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,700");
   
   .joinChatContainer {
     display: flex;
@@ -115,29 +114,29 @@
   }
   
   #you {
-    justify-content: flex-start;
+    justify-content: flex-end;
   }
   
   #you .message-content {
-    justify-content: flex-start;
+    justify-content: flex-end;
   }
   
   #you .message-meta {
-    justify-content: flex-start;
+    justify-content: flex-end;
     margin-left: 5px;
   }
   
   #other {
-    justify-content: flex-end;
+    justify-content: flex-start;
   }
   
   #other .message-content {
-    justify-content: flex-end;
-    background-color: cornflowerblue;
+    justify-content: flex-start;
+    background-color: gray;
   }
   
   #other .message-meta {
-    justify-content: flex-end;
+    justify-content: flex-start;
     margin-right: 5px;
   }
   
